# synesthete

./: .gitignore  README.md  pyproject.toml  run_jaws.py  run_pipeline.py
config/: bootstrap_audio_debug.yaml  default.yaml  infer_audio_probe_noprev.yaml  smoke.yaml  smoke_audio_probe.yaml
docs/: audio_inputs.md  audio_responsiveness_postmortem.md  data_engine.md  infrastructure.md  model_architecture.md  refactor_plan_generalization_emergence.md  rfc_loss_functions.md  roadmap_latent_diffusion.md  standards.md  visualizers.md
docs/journal/: 2026-03-07.md
scripts/: check_vae_reactivity.py  eval_audio_reactivity.py  eval_style_diversity.py  eval_suite.py  inspect_encoder.py  inspect_encoder_methods.py  inspect_torchcodec.py  save_favorite.py  test_torchcodec_io.py  validate_config_overrides.py
src/: audio_features.py  audio_gen.py  data.py  diffusion.py  inference.py  inference_diffusion.py  matcher.py  model.py  tracker.py  train.py  train_diffusion.py  train_vae.py  utils.py  vae.py  visualizers.py
src/visualizers/: __init__.py  augment.py  base.py  compositor.py  contours.py  debug.py  kaleidoscope.py  particles.py  programs.py  pulse.py  spectrum.py  tiles.py  trails.py  utils.py  waveform.py
