[project]
name = "synesthete"
version = "0.1.0"
description = "A foundational project for exploring audio-to-video generation models using PyTorch on Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "torchaudio",
    "torchvision",
    "matplotlib",
    "soundfile>=0.13.1",
    "pyyaml>=6.0.3",
    "wandb>=0.24.0",
    "moviepy>=2.2.1",
    "torchcodec>=0.10.0",
]

[tool.uv]
package = false
